# textgenhub

./: .coverage  .flake8  .gitattributes  .gitignore  .npmignore  .pre-commit-config.yaml  LICENCE  README.md  coverage.xml  full_run_log.txt  index.js  latest_run_log.txt  package-lock.json  package.json  pyproject.toml  pytest.ini  textgenhub_patches.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deepseek_test.yml  dependency-version-sync.yml  dist-cleanup.yml  dist_cleanup.yml  nightly-regression-test.yml  regression_test.yml  test_email.yml  tests.yml
docs/: SESSION_MANAGEMENT_IMPROVEMENTS.md
logs/: chatgpt_manual_error_1762583424435.html
src/levisllmhub/: __init__.py  package-lock.json
src/levisllmhub/chatgpt/: chatgpt.js  chatgpt.py  chatgpt_cli.js
src/levisllmhub/core/: base-provider.js
src/levisllmhub/utils/: scrape_response.py
src/textgenhub/: __init__.py  chatgpt_tab_manager.py  cli.py  package-lock.json  package.json
src/textgenhub/chatgpt/: __init__.py  chatgpt.js  chatgpt.py  chatgpt_cli.js  check_session.js  init_session.js
src/textgenhub/chatgpt/artifacts/: chatgpt_last_error_1760546450067.html  chatgpt_last_error_1760546867427.html
src/textgenhub/chatgpt/lib/: errors.js  index.js  logger.js
src/textgenhub/chatgpt_extension_cli/cli/: chatgpt_cli.py  error_handler.py  logger.py  server.py
src/textgenhub/chatgpt_extension_cli/extension/: automation.js  background.js  content.js  injected.js  manifest.json
src/textgenhub/chatgpt_old/: chatgpt.cjs  chatgpt_old_cli.cjs
src/textgenhub/chatgpt_old/chatgpt/: chatgpt.js  chatgpt.py  chatgpt_cli.js  chatgpt_cli_fixed.js
src/textgenhub/core/: base-provider.js  browser-manager.js  provider.py
src/textgenhub/deepseek/: __init__.py  deepseek.js  deepseek.py  deepseek_cli.js
src/textgenhub/grok/: __init__.py  grok.js  grok.py  grok_cli.js
src/textgenhub/perplexity/: __init__.py  perplexity.js  perplexity.py  perplexity_cli.js
src/textgenhub/utils/: browser_utils.py  chatgpt_tab_manager.py  scrape_response.py
tests/: __init__.py  conftest.py  test_browser_manager_screenshot.js  test_browser_utils.py  test_chatgpt.py  test_cli.py  test_cli_functionality.py  test_core_provider.py  test_e2e_scenarios.py  test_error_handling.py  test_integration.py  test_logger.py  test_provider_comprehensive.py  test_sequential_calls_fix.py  test_session_management_fix.py  test_unified_interface.py
tests/chatgpt/: chatgpt.test.js
tests/core/: browser-manager.test.js
tests/deepseek/: deepseek.test.js
tests/grok/: grok.test.js
tests/perplexity/: perplexity.test.js
