[tool.poetry]
name = "textgenhub"
version = "1.0.0"
description = "My personal LLM hub to connect to web-based LLMs"
readme = "README.md"
authors = ["Levente Csibi <csibi.levente14@gmail.com>"]
license = "MIT"

homepage = "https://github.com/leweex95/textgenhub"
repository = "https://github.com/leweex95/textgenhub"
documentation = "https://github.com/leweex95/textgenhub#readme"

keywords = ["LLM", "AI", "Python", "Node.js", "Puppeteer", "Integration"]

packages = [{include = "textgenhub", from = "src"}]

include = [
    "package.json",
    "package-lock.json",
    "src/textgenhub/**/*.js"
]

[tool.poetry.dependencies]
python = ">=3.9"
websockets = "^15.0.1"

[tool.poetry.scripts]
textgenhub = "textgenhub.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
