[tool.poetry]
name = "textgenhub"
version = "1.1.11"
description = "My personal LLM hub to connect to web-based LLMs"
readme = "README.md"
authors = ["Levente Csibi <csibi.levente14@gmail.com>"]
license = "MIT"

homepage = "https://github.com/leweex95/textgenhub"
repository = "https://github.com/leweex95/textgenhub"
documentation = "https://github.com/leweex95/textgenhub#readme"

keywords = ["LLM", "AI", "Python", "Node.js", "Puppeteer", "Integration"]

packages = [{include = "textgenhub", from = "src"}]

include = [
    "package.json",
    "package-lock.json",
    "src/textgenhub/**/*.js"
]

exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/temp",
    "**/logs",
    "**/.pytest_cache"
]

[tool.poetry.dependencies]
python = ">=3.13"
websockets = "^15.0.1"
websocket-client = "^1.6.4"
requests = "^2.31.0"
pywin32 = {version = "^306", markers = "sys_platform == 'win32' and python_version < '3.13'"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
flake8 = "^6.0.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
textgenhub = "textgenhub.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 200
target-version = ['py313']

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
